# mysystemindicator

./: .gitignore  CMakeLists.txt  README.md  config.h.in  post_install.cmake
data/: 90_unity-greeter.gschema.override.in  com.canonical.indicator.test.in  com.canonical.indicator.test.service.in
src/: indicator-test-service.c
